fix: Grid 레이아웃 overflow 이슈 수정

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1859,7 +1859,3 @@
     U+201c-201d, U+2122, U+ac00, U+ace0, U+ae30, U+b2e4, U+b85c, U+b9ac, U+c0ac,
     U+c2a4, U+c2dc, U+c774, U+c778, U+c9c0, U+d558;
 }
-
-body {
-    overflow-x: hidden;
-}
